--- a/config-dev/application-dev.yml
+++ b/config-dev/application-dev.yml
@@ -3,13 +3,13 @@
 # 公共配置地址
 base:
   auth:
-    server: http://localhost:9001
+    server: http://localhost:9000
   mysql:
     url: jdbc:mysql://localhost:3306
   redis:
     host: 127.0.0.1
     port: 6379
-    password: hyman
+    password: 123456
   zipkin:
     url: http://111.231.192.110:10003/
 
